--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "url-slug-generator",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Format string to slug",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chenqianhe/slugify.git"
   },
-  "main": "dist/cjs/slugify.js",
-  "module": "dist/esm/slugify.js",
-  "types": "dist/esm/slugify.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "scripts": {
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.esm.json",
@@ -22,6 +22,13 @@
   "author": "Qianhe Chen",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
+    "@types/unidecode": "^0.1.3",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "slugify": "^1.6.6",
+    "unidecode": "^0.1.8"
   }
 }
