--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,7 +3,12 @@
     "module": "ESNext",
     "outDir": "./dist/esm",
     "declaration": true,
-    "target": "es6"
+    "target": "es6",
+    "lib": ["es2017"],
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
